home - conditionally load home image to correct device screen size to reduce bandwidth on mobile devices; added react-responsive package

--- a/src/sass/components/pages/home.scss
+++ b/src/sass/components/pages/home.scss
@@ -5,6 +5,10 @@
 
 //home section
 //----------------------
+.react-reveal {
+  width: 100%;
+}
+
 #home-image-container {
   position: relative;
 }
